index based on mock

--- a/apps/web/priv/templates/dev.html
+++ b/apps/web/priv/templates/dev.html
@@ -4,7 +4,7 @@
   <title>{{title}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/static/images/favicon.ico">
-  <link rel="stylesheet/less" type="text/css" href="/static/igrach/igrach.less"/>
+  <link rel="stylesheet/less" type="text/css" href="/static/igratch/igratch.less"/>
   <script src="/static/less/dist/less-1.4.0-beta.js" type="text/javascript"></script>
   <!-- Google Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
