--- a/apps/web/priv/static/css/igratch.css
+++ b/apps/web/priv/static/css/igratch.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,800);
 .clearfix{*zoom:1}.clearfix:before,.clearfix:after{display:table;content:"";line-height:0}
 .clearfix:after{clear:both}
 .hide-text{font:NaN a;color:transparent;text-shadow:none;background-color:transparent;border:0}
@@ -1265,22 +1264,11 @@ a .icon-rotate-90:before,a .icon-rotate-180:before,a .icon-rotate-270:before,a .
 .icon-vk:before{content:"\f189"}
 .icon-weibo:before{content:"\f18a"}
 .icon-renren:before{content:"\f18b"}
-body{font-family:'Open Sans',Arial,serif;font-size:16px;line-height:24px}
-h1,h2,h3,h4,h5,h6{font-family:'Open Sans',Arial,serif;font-weight:800}
-body{padding-top:0}
-@media (min-width:980px){body{padding-top:80px}}@media (min-width:980px){.sky-navbar.navbar .nav>li>a{padding:29px 10px 31px}}.sky-navbar .brand{font-weight:800;font-size:30px;line-height:30px;padding:23px 20px 27px;margin-top:0;margin-bottom:0;color:#555;text-shadow:0 1px 0 #fff}.sky-navbar .brand a{color:#555}
-.sky-navbar .navbar-inner{background:#fff;background:rgba(255,255,255,0.95);-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;border-bottom:1px solid #e9e9e9}
-.sky-navbar .btn-navbar{margin-top:15px}
-.n2o-modal-body{position:relative;padding:15px;overflow-y:auto}
-.tag-mini{font-size:14px;line-height:18px;color:#999}.tag-mini a{color:#999}.tag-mini a:hover{color:#005580}
-.tag-small{font-size:16.8px;line-height:20.8px;color:#999}.tag-small a{color:#999}.tag-small a:hover{color:#005580}
-.tag-large{font-size:32.199999999999996px;line-height:36.199999999999996px;color:#999}.tag-large a{color:#999}.tag-large a:hover{color:#005580}
-.tag-huge{font-size:51.800000000000004px;line-height:55.800000000000004px;color:#999}.tag-huge a{color:#999}.tag-huge a:hover{color:#005580}
-.label-transparent,.badge-transparent,.label-transperent[href],.badge-transperent[href]{background-color:transparent;color:currentColor;top:0 !important;text-shadow:none}
-.sky-footer{background:#333;color:#e9e9e9;border-top:1px solid #000;text-shadow:1px 1px 1px #222;-webkit-box-shadow:0 3px 3px rgba(0,0,0,0.25);-moz-box-shadow:0 3px 3px rgba(0,0,0,0.25);box-shadow:0 3px 3px rgba(0,0,0,0.25);padding:30px 0;margin:0;position:relative}.sky-footer .btn-link{text-shadow:1px 1px 1px #222}
-.sky-footer small{color:#e9e9e9;font-style:italic;text-indent:0;display:block}
-.sky-footer .icons{text-indent:-0.8em;margin-left:2em;list-style-type:none}
-.sky-footer h3{text-transform:uppercase}
+body{padding-top:0;font-family:'Source Sans Pro',sans-serif;font-size:11pt;color:#666;background-color:#dcdee0}
+a:hover{text-decoration:none}
+h1,h2,h3,h4,h5,h6,h7{font-family:'Oswald',sans-serif;text-shadow:1px 1px #fff}
+.blue{color:#048eb1}
+.ighead{color:#f00}
 .product-carousel .carousel-inner{max-height:500px}
 .product-carousel .carousel-caption{background:none}
 .product{text-decoration:none;margin:0 0 24px;position:relative;background:#333}.product .product-price{background:#fff;color:#000}.product .product-price-price{font-size:30px;margin:-10px -20px 0 -20px;padding:8px 0 10px;background-color:#eee;-webkit-box-shadow:0 0 10px rgba(153,153,153,0.2) inset;-moz-box-shadow:0 0 10px rgba(153,153,153,0.2) inset;box-shadow:0 0 10px rgba(153,153,153,0.2) inset;color:#41b7d8;text-shadow:1px 1px 0 #fff}.product .product-price-price span{font-weight:normal}
