--- a/apps/web/priv/static/igratch/igratch.less
+++ b/apps/web/priv/static/igratch/igratch.less
@@ -2,4 +2,6 @@
 @import "../bootstrap/less/responsive.less";
 @import "../font-awesome/less/font-awesome.less";
 @import "common.less";
-@import "products.less";
+@import "slider.less";
+@import "articles.less";
+@import "media.less";
