--- a/apps/web/priv/templates/prod.html
+++ b/apps/web/priv/templates/prod.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Андрей">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/static/images/favicon.ico" rel="shortcut icon" >
-  <link href="/static/css/igrach.css" rel="stylesheet" type="text/css">
+  <link href="/static/css/igratch.css" rel="stylesheet" type="text/css">
   <!-- Google Fonts -->
   <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet" type="text/css">
