--- a/apps/web/priv/static/igratch/common.less
+++ b/apps/web/priv/static/igratch/common.less
@@ -8,7 +8,6 @@ body{
 
 @media (min-width: 980px){body{padding-top:132px;}}
 
-
 a{&:hover {text-decoration:none;}}
 
 h1,h2,h3,h4,h5,h6,h7 {
@@ -61,26 +60,9 @@ h1,h2,h3,h4,h5,h6,h7 {
 }
 
 .igfoot {
-  & .icons {
-    list-style-type: none;
-    & li {display:inline-block;}
-  }
-
-  & #footer-background {
-    width:932px;
-    margin:0 auto;
-  }
-  & #links li {margin-right:10px;}
-  & #social-links li{padding:2px;}
-  & #footer-text {
-    width:900px;
-    margin:0 auto;
-    text-align:center;
-    margin-top:-70px;
-    margin-bottom:30px;
-    color:#94989d;
-  }
-  & a {color:#94989d; &:hover{color:#005580;}}
+  color:#94989d;
+  padding-bottom: 20px;
+  & a {color:#94989d;&:hover{color:#005580;}}
 }
 
 
