login + converted pages

--- a/apps/web/priv/static/bootstrap/less/bootstrap.less
+++ b/apps/web/priv/static/bootstrap/less/bootstrap.less
@@ -9,7 +9,7 @@
  */
 
 // Core variables and mixins
-@import "variables.less"; // Modify this for custom colors, font-sizes, etc
+//@import "variables.less"; // Modify this for custom colors, font-sizes, etc
 @import "mixins.less";
 
 // CSS Reset
@@ -27,7 +27,8 @@
 @import "tables.less";
 
 // Components: common
-@import "sprites.less";
+//@import "sprites.less";
+@import "../../font-awesome/less/font-awesome.less";
 @import "dropdowns.less";
 @import "wells.less";
 @import "component-animations.less";
