--- a/apps/web/priv/static/igratch/igratch.less
+++ b/apps/web/priv/static/igratch/igratch.less
@@ -1,6 +1,8 @@
+@import "variables.less";
 @import "../bootstrap/less/bootstrap.less";
 @import "../bootstrap/less/responsive.less";
-@import "../font-awesome/less/font-awesome.less";
 @import "common.less";
 @import "slider.less";
+@import "buttons.less";
 @import "articles.less";
+@import "custom7.less";
