--- a/apps/web/priv/static/igratch/buttons.less
+++ b/apps/web/priv/static/igratch/buttons.less
@@ -1,3 +1,26 @@
+.btn {
+    background-image:none;
+    padding:10px;
+    text-shadow:none;
+    font-weight:700;
+    color: @white;
+}
+.btn-blue {
+    background-color:#048eb1;
+}
+.btn-orange {
+    background-color:#e69805;
+}
+.btn-grey {
+    background-color:#b3babf;
+}
+.btn-rust {
+    background-color:#e65e05;
+}
+.btn-border {
+    border:3px solid white;
+}
+
 .btn-google-plus {
   .buttonBackground(@btnGooglePlusBackground, @btnGooglePlusBackgroundHighlight);
   & .icon-google-plus{margin-right:12px;}
