--- a/apps/web/priv/static/igratch/variables.less
+++ b/apps/web/priv/static/igratch/variables.less
@@ -27,3 +27,9 @@
 // -------------------------
 @btnGooglePlusBackground:               #cc3732;
 @btnGooglePlusBackgroundHighlight:      #e74b37;
+
+// Navbar
+// -------------------------
+@navbarCollapseWidth:             767px;
+@navbarBrandColor:                #fffefe;
+
