--- a/apps/web/priv/templates/dev.html
+++ b/apps/web/priv/templates/dev.html
@@ -20,6 +20,7 @@
   <script src="/static/n2o/bullet.js"></script>
   <script src="/static/n2o/n2o.js"></script>
   <script src="/static/js/holder.js"></script>
+  <script src="/static/n2o/textboxlist.js"></script>
   <script src="/static/bootstrap/js/bootstrap-transition.js"></script>
   <script src="/static/bootstrap/js/bootstrap-dropdown.js"></script>
   <script src="/static/bootstrap/js/bootstrap-button.js"></script>
@@ -28,5 +29,7 @@
   <script src="/static/bootstrap/js/bootstrap-collapse.js"></script>
   <script src="/static/bootstrap/js/bootstrap-modal.js"></script>
   <script src="/static/bootstrap/js/bootstrap-tab.js"></script>
+  <script src="/static/bootstrap/js/bootstrap-scrollspy.js"></script>
+  <script src="/static/bootstrap/js/bootstrap-affix.js"></script>
 </body>
 </html>
