--- a/apps/web/priv/static/igratch/articles.less
+++ b/apps/web/priv/static/igratch/articles.less
@@ -1,15 +1,18 @@
 /************* ARTICLES *************/
-.homepage-article {
+.homepage-article, .game-article  {
     border-bottom:1px solid white;
     margin-bottom:30px;
 }
-.homepage-article-inner {
+.homepage-article-inner, .game-article-inner {
     border-bottom:1px solid #ced0d2;
+}
+.statistics span {
+    margin-right:5px;
 }
 .article-meta p {
     margin-top:-10px;
 }
-p.datestamp, p.statistics {
+p.dtestamp, p.statistics {
     color:#999999;
     font-size:9pt;
 }
@@ -26,12 +29,13 @@ p.username {
 i {
     opacity:0.5;
 }
-.BorderAndShadow {
+
+.BorderAndShadow, .border {
     border:4px solid white;
     margin-bottom:20px;
 }
 .shadow {
-    background:url('/static/img/image-shadow.png') no-repeat 0px 132px;
+  background:url('/static/img/image-shadow.png') no-repeat 0px 132px;
 }
 
 /************* SIDEBAR *************/
@@ -55,17 +59,3 @@ i {
     margin-bottom:5px;
 }
 
-/*************************** MISC. ***************************/
-.btn {
-    background-image:none;
-    background-color:#048eb1;
-    padding:10px;
-    text-shadow:none;
-    font-family: 'Oswald', sans-serif;
-    font-weight:700;
-    color:white;
-}
-.btn-center {
-  width:100px;
-  margin:0 auto;
-}
