--- a/apps/web/priv/static/igratch/buttons.less
+++ b/apps/web/priv/static/igratch/buttons.less
@@ -1,9 +1,10 @@
 .btn {
-    background-image:none;
-    padding:10px;
-    text-shadow:none;
-    font-weight:700;
-    color: @white;
+  background-image:none;
+  padding:10px;
+  text-shadow:none;
+  font-weight:700;
+  color: @white;
+  font-family: 'Oswald', sans-serif;
 }
 .btn-blue {
     background-color:#048eb1;
@@ -20,6 +21,13 @@
 .btn-border {
     border:3px solid white;
 }
+
+.btn-center {
+  width:100px;
+  margin:0 auto;
+}
+
+.capital {text-transform:uppercase;}
 
 .btn-google-plus {
   .buttonBackground(@btnGooglePlusBackground, @btnGooglePlusBackgroundHighlight);
