--- a/apps/web/priv/static/igratch/common.less
+++ b/apps/web/priv/static/igratch/common.less
@@ -77,4 +77,10 @@ h1,h2,h3,h4,h5,h6,h7 {
   top:auto;
 }
 
+.main-no-slider {
+  margin-top:75px;
+  @media(max-width: 979px) and (min-width: 768px) {margin-top:155px;}
+  @media(max-width: 767px){margin-top:25px;}
+}
+
 
