--- a/apps/web/priv/static/igratch/articles.less
+++ b/apps/web/priv/static/igratch/articles.less
@@ -38,6 +38,37 @@ i {
   background:url('/static/img/image-shadow.png') no-repeat 0px 132px;
 }
 
+.game-article {
+}
+
+.dev-controls {
+  .btn .divider {
+    display:inline-block;
+    margin:0 auto 5px;
+    width:100%;
+  }
+  .icon-white {margin-right:5px;}
+}
+
+.input-append.price{
+      & input {
+        padding: 10px 5px;margin-top: -10px;text-align: center;font-weight: 700;
+        width: 70px; height: 20px; background-color: #f5f5f5;
+        border: none; .box-shadow(none);color: #666666; letter-spacing: 0.5pt;font-size: 12pt;line-height: 15pt;
+      }
+      .btn-group.open .btn.dropdown-toggle {background-color: #f5f5f5;}
+      & button {
+        color: #666666;
+        background-color: #f5f5f5;
+        border: none; .box-shadow(none);font-weight: 400;letter-spacing: 0.5pt;font-size: 12pt;line-height: 15pt;
+        margin-top: -10px;
+        padding: 10px;
+        text-shadow: none;
+        &:hover, &:active, &:focus{background-color: #f5f5f5;}
+      }
+}
+
+
 /************* SIDEBAR *************/
 .sidebar .row-fluid {
     margin-bottom:30px;
