--- a/apps/web/priv/static/bootstrap/less/bootstrap.less
+++ b/apps/web/priv/static/bootstrap/less/bootstrap.less
@@ -60,5 +60,9 @@
 @import "carousel.less";
 @import "hero-unit.less";
 
+// External comonents
+@import "slider.less";
+@import "select.less";
+
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
