--- a/apps/web/priv/templates/dev.html
+++ b/apps/web/priv/templates/dev.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet/less" type="text/css" href="/static/igratch/igratch.less"/>
   <script src="/static/less/dist/less-1.4.0-beta.js" type="text/javascript"></script>
   <!-- Google Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+  <!--link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'-->
+  <!--link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'-->
 
 </head>
 <body>
@@ -31,5 +31,7 @@
   <script src="/static/bootstrap/js/bootstrap-tab.js"></script>
   <script src="/static/bootstrap/js/bootstrap-scrollspy.js"></script>
   <script src="/static/bootstrap/js/bootstrap-affix.js"></script>
+  <script src="/static/bootstrap/js/bootstrap-select.js"></script>
+  <script src="/static/bootstrap/js/bootstrap-slider.js"></script>
 </body>
 </html>
