--- a/apps/web/priv/static/igratch/common.less
+++ b/apps/web/priv/static/igratch/common.less
@@ -1,13 +1,12 @@
 body{
   padding-top:0;
-  @media (min-width: 980px){padding-top:105px;}
+  @media (min-width: 980px){padding-top:79px;}
 }
 
 a{&:hover {text-decoration:none;}}
 
 h1,h2,h3,h4,h5,h6,h7 {
   text-shadow:1px 1px white;
-  margin-top:-8px;
 }
 
 .blue {color:#048eb1;}
@@ -26,7 +25,8 @@ h1,h2,h3,h4,h5,h6,h7 {
     background: -ms-linear-gradient(top, #079ebd 0%,#026e97 100%); /* IE10+ */
     background: linear-gradient(to bottom, #079ebd 0%,#026e97 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#079ebd', endColorstr='#026e97',GradientType=0 ); /* IE6-9 */
-    padding:10px 0;
+    //padding:10px 0;
+    padding:0;
     border-radius:0;
     border:none;
     border-top:1px solid #89d8df;
@@ -34,13 +34,14 @@ h1,h2,h3,h4,h5,h6,h7 {
   }
 
   &.navbar{
-    & .nav{margin-top:20px;}
+    & .nav{margin-top:15px;}
     & .nav > li > a {
       text-shadow:2px 2px black;
       color:#fffefe;
       font-family: 'Oswald', sans-serif;
       font-size:13.5pt;
       font-weight:700;
+      padding: 15px;
       &:hover{
         color:#dcdee0;
       }
@@ -59,6 +60,7 @@ h1,h2,h3,h4,h5,h6,h7 {
     font-size:20pt;
     font-weight:700;
     text-shadow:2px 2px black;
+    padding: 3px 20px 3px;
   }
 
   & .btn-navbar {margin-top:15px;}
