--- a/apps/web/priv/static/igratch/variables.less
+++ b/apps/web/priv/static/igratch/variables.less
@@ -6,7 +6,7 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:        #dcdee0;
+//@bodyBackground:        #dcdee0;
 @textColor:             #666666;
 
 // Typography
