limit size of h's

--- a/apps/web/priv/static/igratch/articles.less
+++ b/apps/web/priv/static/igratch/articles.less
@@ -16,16 +16,17 @@
     max-height: 132px;
     height: 9em;
     position:relative;
-
+    & h1,& h2,& h3,& h4 { margin:0; font-size:1em;}
     & p {
       margin:0;
       display:inline;
     }
-    & h3 {
+    & h3.title {
       color:#9b9c9e;
       margin:0;
       padding:0;
       line-height:2em;
+      font-size: 19.25pt;
     }
     & a.more {
       position: absolute;bottom: 0;right: 0;background: inherit;
