--- a/apps/web/priv/static/igratch/articles.less
+++ b/apps/web/priv/static/igratch/articles.less
@@ -31,7 +31,7 @@
     & a.more {
       position: absolute;bottom: 0;right: 0;background: inherit;
       background-color:@bodyBackground;
-      padding-left:10px;
+      padding:0 10px;
     }
   }
 }
