--- a/apps/web/priv/static/igratch/account.less
+++ b/apps/web/priv/static/igratch/account.less
@@ -1,3 +1,144 @@
+.dash-sidebar-nav{
+  font-size: 20px;
+  list-style-type: none;
+  margin: 24px 20px 0 0;
+  padding: 0;
+  width: 210px;
+
+  @media (min-width: 1200px){width: 250px;}
+  & li {
+    &.active a{
+      background-color:transparent;
+      .text-warning();
+      &:hover{
+        //text-shadow:2px 2px black;
+        background-color:transparent;
+        color:#dcdee0;
+      }
+    }
+
+    & a {
+      color: #555555;
+      margin: 0 0 10px;
+      text-align: right;
+      text-transform: uppercase;
+      font-weight:bold;
+      background-color: transparent;
+      border-right: 3px solid #555555;
+      text-shadow: none;
+      font-family: 'Oswald', sans-serif;
+      text-shadow:2px 2px white;
+
+    }
+  }
+}
+
+.dashboard{
+  margin-top:40px;
+  @media (max-width: 767px){margin-top:0;}
+
+  & .dashboard-section{
+    margin:40px 0 0 0;
+    &:first-child{
+      margin-top:0;
+      border-bottom: 1px solid #e9e9e9;
+    }
+  }
+
+  & .dashboard-unit{
+    padding: 0;
+    z-index: 1;
+    overflow: hidden;
+    padding-bottom:30px;
+
+    & select{width:100%;}
+    & h3{margin-top:0;margin-bottom:30px;}
+
+    &:hover{& .dashboard-img{
+      border-color: rgba(153, 153, 153, 0.3);
+      & img {.opacity(80);}
+    }}
+
+    & .dashboard-img-wrapper{
+      text-align:center;
+      @media (max-width: 979px) and (min-width: 768px){width:100%;}
+      @media (min-width: 1200px) {text-align:left;}
+    }
+    & .dashboard-img {
+      display:inline-block;
+      margin:0 0 30px;
+      max-width: 180px;
+      max-height: 180px;
+      .box-shadow(0 0 10px rgba(51, 51, 51, 0.9) inset);
+      border: 10px solid #e9e9e9;
+      .transition(all 0.2s);
+      .border-radius(500px);
+
+      z-index: -1;
+      & img{
+        .transition(all 0.2s);
+        .border-radius(inherit);
+        .opacity(40);
+      }
+      &.img-polaroid{padding:0;}
+    }
+
+    & .profile-info-wrapper{
+      min-width:370px;
+      text-align:center;
+      @media (max-width:410px){width:100%;min-width:100%;}
+      @media (max-width: 979px) and (min-width: 768px){width:100%;}
+      @media (min-width: 1200px) {text-align:left; margin-left:0;}
+    }
+    & .profile-info{
+      min-width:370px;
+      @media (max-width:410px){width:100%; min-width:100%;}
+
+      line-height: 1.5em;
+      display:inline-block;
+      text-align:left;
+
+      & label {
+        font-size: 1.5em;
+        line-height: 1.5em;
+        margin-right:10px;
+        margin-bottom:0;
+        color:#048eb1;
+
+        @media (max-width:410px){width:100%;}
+      }
+    }
+
+    & .payments{
+      margin-bottom:30px;
+      max-width: 500px;
+      @media (max-width:768px){margin: 0 auto;}
+    }
+
+    & .containers{
+      margin-bottom:60px;
+      max-width: 600px;
+    }
+
+    & .btn-charge{/*margin-top:10px;*/}
+
+    & .ballance-label{
+      margin-bottom:20px;
+      font-size: 20px;
+
+      & b{
+        //font-size:56px;
+        //line-height:70px;
+        margin:0 auto;
+        display:block;
+        &.positive{color:green;}
+        &.negative{color:red;}
+      }
+      & span { }
+    }
+  }
+}
+
 .control-panel{
   background-color:#ced1d3;
   position:relative;
