default font base

--- a/apps/web/priv/static/igratch/variables.less
+++ b/apps/web/priv/static/igratch/variables.less
@@ -22,14 +22,12 @@
 @sourceSansProFontFamily:    "Source Sans Pro", sans-serif;
 @oswaldFontFamily:         'Oswald', sans-serif;
 
-@baseFontSize:          11pt;
 @baseFontFamily:        @sourceSansProFontFamily;
-@baseLineHeight:        20px;
 @altFontFamily:         @oswaldFontFamily;
 
 @headingsFontFamily:    @oswaldFontFamily; // empty to use BS default, @baseFontFamily
-@headingsFontWeight:    bold;    // instead of browser default, bold
-@headingsColor:         inherit; // empty to use BS default, @textColor
+//@headingsFontWeight:    bold;    // instead of browser default, bold
+//@headingsColor:         inherit; // empty to use BS default, @textColor
 
 // Buttons
 // -------------------------
