--- a/apps/web/priv/static/igratch/variables.less
+++ b/apps/web/priv/static/igratch/variables.less
@@ -34,6 +34,9 @@
 @btnGooglePlusBackground:               #cc3732;
 @btnGooglePlusBackgroundHighlight:      #e74b37;
 
+@btnVioletBackground:                   #8108ad;
+@btnVioletBackgroundHighlight:          darken(@btnVioletBackground, 15%);
+
 // Navbar
 // -------------------------
 @navbarCollapseWidth:             767px;
