--- a/apps/web/priv/static/igratch/slider.less
+++ b/apps/web/priv/static/igratch/slider.less
@@ -40,180 +40,32 @@
   }
 }
 
-/************* OVERLAYS *************/
-/******* CALL TO ACTION *******/
 .buy {
   background-color: black;
-	position: absolute;
-	top: 140px;
-	left: 40%;
-	color: #00a6d2;
-	font-size: 18pt;
-	font-family: 'Oswald', sans-serif;
-	line-height: 46px;
-    border-radius: 0;
-    padding-bottom: 5px;
-    padding-top: 5px;
-}
-
-.container .buy p {
+  position: absolute;
+  top: 140px;
+  left: 40%;
+  color: #00a6d2;
+  font-size: 18pt;
+  font-family: 'Oswald', sans-serif;
+  line-height: 46px;
+  border-radius: 0;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  & p{
     position:relative;
     top:5px;
+    @media (max-width: 480px) {top:0;}
+  }
+  & span {
+    color: white;
+  }
+
+  @media (max-width: 480px) {
+    position:relative;
+    top:0;
+    left:0;
+    margin:0 auto;
+  }
+  @media (max-width: 320px) {width:100%;}
 }
-.container .buy span {
-	color: white;
-}
-
-/******* BOXES *******/
-.box {
-  .border-radius(5px);
-  text-align: center;
-  color: white;
-  font-family: 'Oswald', sans-serif;
-  font-size: 13.5pt;
-  height: 110px;
-  margin-bottom: 5px;
-  position: relative;
-  cursor: pointer;
-}
-
-.box .price {
-	position: absolute;
-	bottom: 3px;
-	right: 3px;
-}
-.box .hardware {
-	position: absolute;
-	bottom: 6px;
-	left: 6px;
-	height: 25px;
-	width: 100px;
-	background-position: bottom left;
-	background-repeat: no-repeat;
-}
-.box .hardware.pc {
-	background-image: url('/static/img/icon-pcwin.png');
-}
-.box .hardware.wii {
-	background-image: url('/static/img/icon-wii.png');
-}
-.box .hardware.xbox {
-	background-image: url('/static/img/icon-xbox.png');
-}
-.box p {
-	margin-top: 5px;
-	margin-bottom: 10px;
-}
-.box .accent {
-	padding-top: 6px;
-	padding-bottom: 6px;
-	font-size: 27pt;
-	line-height: 27pt;
-}
-
-/* ORANGE */
-.box.orange {
-	background: #ecaf0c; /* Old browsers */
-	background: -moz-linear-gradient(top,  #ecaf0c 0%, #dd8103 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ecaf0c), color-stop(100%,#dd8103)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #ecaf0c 0%,#dd8103 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #ecaf0c 0%,#dd8103 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #ecaf0c 0%,#dd8103 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #ecaf0c 0%,#dd8103 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ecaf0c', endColorstr='#dd8103',GradientType=0 ); /* IE6-9 */
-	border-top: 2px solid #ffd90e;
-	text-shadow: 1px 1px 1px #451f00;
-}
-.box.orange .accent {
-	background-color: #d15f00;
-}
-
-/* GREEN */
-.box.green {
-	background: #96c60a; /* Old browsers */
-    background: -moz-linear-gradient(top,  #96c60a 0%, #61a003 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#96c60a), color-stop(100%,#61a003)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #96c60a 0%,#61a003 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #96c60a 0%,#61a003 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #96c60a 0%,#61a003 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  #96c60a 0%,#61a003 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#96c60a', endColorstr='#61a003',GradientType=0 ); /* IE6-9 */
-    border-top: 2px solid #baf90b;
-    text-shadow: 1px 1px 1px #214600;
-}
-.box.green .accent
-{
-	background-color: #3d8300;
-}
-
-/* VIOLET */
-.box.violet {
-	background: #8108ad; /* Old browsers */
-    background: -moz-linear-gradient(top,  #8108ad 0%, #4a027e 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8108ad), color-stop(100%,#4a027e)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #8108ad 0%,#4a027e 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #8108ad 0%,#4a027e 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #8108ad 0%,#4a027e 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  #8108ad 0%,#4a027e 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8108ad', endColorstr='#4a027e',GradientType=0 ); /* IE6-9 */
-    border-top: 2px solid #9f09d8;
-    text-shadow: 1px 1px 1px #14002f;
-}
-.box.violet .accent {
-	background-color: #2c005f;
-}
-
-/* BLUE */
-.box.blue {
-	background: #0baac6; /* Old browsers */
-    background: -moz-linear-gradient(top,  #0baac6 0%, #03769d 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0baac6), color-stop(100%,#03769d)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #0baac6 0%,#03769d 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #0baac6 0%,#03769d 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #0baac6 0%,#03769d 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  #0baac6 0%,#03769d 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0baac6', endColorstr='#03769d',GradientType=0 ); /* IE6-9 */
-    border-top: 2px solid #0bd0f6;
-    text-shadow: 1px 1px 1px #001f31;
-}
-.box.blue .accent {
-	background-color: #00517e;
-}
-
-
-@media (max-width: 480px) {
-    .accent {
-        font-size: 22pt;
-        line-height: 22pt;
-    }
-    .buy {
-        position:relative;
-        top:0;
-        left:0;
-        margin:0 auto;
-    }
-    .container .buy p {
-        top:0;
-    }
-}
-@media (max-width: 320px) {
-    .container .buy {
-        width:100%;
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
